--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="id">
 <head>
   <meta charset="UTF-8">
@@ -222,8 +222,8 @@
       <a href="comments.html" class="header-link" title="Komentar & Rating">💬 Komentar</a>
       <!-- Pembayaran link added -->
       <a href="pembayaran2.html" class="header-link" title="Halaman Pembayaran">💳 Pembayaran</a>
-      <!-- Blog link (ditambahkan) -->
-      <a href="https://muslihfvnky.blogspot.com/?m=1" class="header-link" title="Kunjungi Blog">📝 Blog</a>
+      <!-- Blog link (ditambahkan, buka di tab baru) -->
+      <a href="https://muslihfvnky.blogspot.com/?m=1" class="header-link" title="Kunjungi Blog" target="_blank" rel="noopener noreferrer">📝 Blog</a>
     </div>
   </header>
 
@@ -258,8 +258,8 @@
             </a>
           </div>
 
-          <!-- Blog button (ditambahkan) -->
-          <a href="https://muslihfvnky.blogspot.com/?m=1" class="glow-btn">📝 Blog</a>
+          <!-- Blog button (ditambahkan, buka di tab baru) -->
+          <a href="https://muslihfvnky.blogspot.com/?m=1" class="glow-btn" target="_blank" rel="noopener noreferrer">📝 Blog</a>
 
           <!-- Primary Testimoni button spans full width -->
           <div style="grid-column: 1 / -1;">
