--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="id">
 <head>
   <meta charset="UTF-8">
@@ -260,6 +260,9 @@
 
           <!-- Blog button (ditambahkan, buka di tab baru) -->
           <a href="https://muslihfvnky.blogspot.com/?m=1" class="glow-btn" target="_blank" rel="noopener noreferrer">📝 Blog</a>
+
+          <!-- Tambahan tombol Subscribe via WA (sesuai permintaan) -->
+          <a href="https://wa.me/6283821665970?text=Halo%20saya%20mau%20subscribe%20untuk%20dapat%20informasi%20produk%20terbaru" class="glow-btn" target="_blank" rel="noopener noreferrer">📩 Dapatkan Informasi Produk Terbaru</a>
 
           <!-- Primary Testimoni button spans full width -->
           <div style="grid-column: 1 / -1;">
