--- a/jual-flm.html
+++ b/jual-flm.html
@@ -162,18 +162,6 @@
       #popular-grid { gap:10px; }
       .popular-card { min-width:200px; }
     }
-
-    /* Controls UI (small, non-intrusive) */
-    .product-controls {
-      display:flex;
-      gap:8px;
-      align-items:center;
-      margin:0 0 18px 0;
-      flex-wrap:wrap;
-    }
-    .product-controls label { font-weight:700; margin-right:6px; color: #dffbf2; }
-    .product-controls select { background: rgba(255,255,255,0.03); color: #fff; border:1px solid rgba(255,255,255,0.06); padding:8px 10px; border-radius:8px; }
-    .glow-btn { transition: all 0.28s ease-in-out; border: 2px solid #0FFCBE; background: rgba(16,110,190,0.8); backdrop-filter: blur(6px); color: white; display: inline-block; width: auto; text-align: center; padding: .6rem .9rem; font-weight: 700; border-radius: 12px; box-shadow: 0 6px 20px rgba(0,0,0,0.35); text-decoration: none; cursor: pointer;}
   </style>
 </head>
 <body class="text-white font-sans p-4 bg-black/70">
@@ -189,31 +177,6 @@
   </header>
 
   <main class="max-w-5xl mx-auto">
-
-    <!-- CONTROLS: sorting & grouping (baru ditambahkan, non-intrusive) -->
-    <div class="product-controls" style="margin-bottom:18px;">
-      <div>
-        <label for="groupSelect">Prioritaskan:</label>
-        <select id="groupSelect" aria-label="Prioritaskan produk">
-          <option value="all">Semua (default)</option>
-          <option value="baru-top">Produk Baru di Atas</option>
-          <option value="lama-top">Produk Lama di Atas</option>
-        </select>
-      </div>
-
-      <div>
-        <label for="sortSelect">Urut:</label>
-        <select id="sortSelect" aria-label="Urutkan produk">
-          <option value="none">Default</option>
-          <option value="az">A - Z</option>
-          <option value="za">Z - A</option>
-        </select>
-      </div>
-
-      <div style="margin-left:auto;">
-        <button id="applySort" class="glow-btn">Terapkan</button>
-      </div>
-    </div>
 
     <!-- POPULAR SECTION -->
     <section id="popular-section" class="mb-6">
@@ -316,7 +279,7 @@
           <div class="font-semibold leading-tight">FLM Style Candu</div>
           <div class="text-sm opacity-90">💲 Rp 82.000</div>
           <div class="mt-2 flex gap-2 items-center">
-            <button data-audio="audio6" class="play-btn px-3 py-2 rounded-xl bg-[#0FFCBE] text-black hover:bg-[#106EBE] hover=text-white transition">▶ Play Preview</button>
+            <button data-audio="audio6" class="play-btn px-3 py-2 rounded-xl bg-[#0FFCBE] text-black hover:bg-[#106EBE] hover:text-white transition">▶ Play Preview</button>
             <a data-buy="candu" href="pembayaran.html?produk=FLM%20Style%20Candu" class="px-3 py-2 rounded-xl bg-[#106EBE] hover:bg-[#0FFCBE] hover=text-black font-medium transition">🛒 Beli</a>
           </div>
           <div class="player-controls-container"></div>
@@ -331,7 +294,7 @@
           <div class="font-semibold leading-tight">FLM HAPPY TEAM ORI</div>
           <div class="text-sm opacity-90">💲 Rp 75.000</div>
           <div class="mt-2 flex gap-2 items-center">
-            <button data-audio="audio7" class="play-btn px-3 py-2 rounded-xl bg-[#0FFCBE] text-black hover:bg-[#106EBE] hover=text-white transition">▶ Play Preview</button>
+            <button data-audio="audio7" class="play-btn px-3 py-2 rounded-xl bg-[#0FFCBE] text-black hover:bg-[#106EBE] hover:text-white transition">▶ Play Preview</button>
             <a data-buy="happy" href="pembayaran.html?produk=FLM%20HAPPY%20TEAM%20ORI" class="px-3 py-2 rounded-xl bg-[#106EBE] hover:bg-[#0FFCBE] hover=text-black font-medium transition">🛒 Beli</a>
           </div>
           <div class="player-controls-container"></div>
@@ -521,13 +484,13 @@
 
       <!-- PRODUK BARU YANG KAMU KIRIM (DITAMBAHKAN) -->
       <!-- 20 -->
-      <li data-prod-id="styleold" data-is-new="true" class="overlay-card bg-black/60 rounded-2xl p-3 flex gap-3 items-center shadow">
+      <li data-prod-id="styleold" class="overlay-card bg-black/60 rounded-2xl p-3 flex gap-3 items-center shadow">
         <img src="https://i.imgur.com/ghNd4So.jpeg" alt="FLM Style Old" class="w-20 h-20 rounded-xl object-cover flex-shrink-0">
         <div class="flex-1">
           <div class="font-semibold leading-tight">FLM Style Old</div>
           <div class="text-sm opacity-90">💲 Rp 50.000</div>
           <div class="mt-2 flex gap-2 items-center">
-            <button data-audio="audio20" class="play-btn px-3 py-2 rounded-xl bg-[#0FFCBE] text-black hover:bg-[#106EBE] hover=text-white transition">▶ Play Preview</button>
+            <button data-audio="audio20" class="play-btn px-3 py-2 rounded-xl bg-[#0FFCBE] text-black hover:bg-[#106EBE] hover:text-white transition">▶ Play Preview</button>
             <a data-buy="styleold" href="pembayaran.html?produk=FLM%20Style%20Old" class="px-3 py-2 rounded-xl bg-[#106EBE] hover:bg-[#0FFCBE] hover=text-black font-medium transition">🛒 Beli</a>
           </div>
           <div class="player-controls-container"></div>
@@ -536,13 +499,13 @@
       </li>
 
       <!-- 21 -->
-      <li data-prod-id="stylerizieqsergio" data-is-new="true" class="overlay-card bg-black/60 rounded-2xl p-3 flex gap-3 items-center shadow">
+      <li data-prod-id="stylerizieqsergio" class="overlay-card bg-black/60 rounded-2xl p-3 flex gap-3 items-center shadow">
         <img src="https://i.imgur.com/ghNd4So.jpeg" alt="FLM Style Rizieq Sergio" class="w-20 h-20 rounded-xl object-cover flex-shrink-0">
         <div class="flex-1">
           <div class="font-semibold leading-tight">FLM Style Rizieq Sergio</div>
           <div class="text-sm opacity-90">💲 Rp 60.000</div>
           <div class="mt-2 flex gap-2 items-center">
-            <button data-audio="audio21" class="play-btn px-3 py-2 rounded-xl bg-[#0FFCBE] text-black hover:bg-[#106EBE] hover=text-white transition">▶ Play Preview</button>
+            <button data-audio="audio21" class="play-btn px-3 py-2 rounded-xl bg-[#0FFCBE] text-black hover:bg-[#106EBE] hover:text-white transition">▶ Play Preview</button>
             <a data-buy="stylerizieqsergio" href="pembayaran.html?produk=FLM%20Style%20Rizieq%20Sergio" class="px-3 py-2 rounded-xl bg-[#106EBE] hover:bg-[#0FFCBE] hover=text-black font-medium transition">🛒 Beli</a>
           </div>
           <div class="player-controls-container"></div>
@@ -551,7 +514,7 @@
       </li>
 
       <!-- 22 -->
-      <li data-prod-id="stylejdmjawa" data-is-new="true" class="overlay-card bg-black/60 rounded-2xl p-3 flex gap-3 items-center shadow">
+      <li data-prod-id="stylejdmjawa" class="overlay-card bg-black/60 rounded-2xl p-3 flex gap-3 items-center shadow">
         <img src="https://i.imgur.com/ghNd4So.jpeg" alt="FLM Style JDM Jawa" class="w-20 h-20 rounded-xl object-cover flex-shrink-0">
         <div class="flex-1">
           <div class="font-semibold leading-tight">FLM Style JDM Jawa</div>
@@ -566,7 +529,7 @@
       </li>
 
       <!-- 23 -->
-      <li data-prod-id="stylebangway" data-is-new="true" class="overlay-card bg-black/60 rounded-2xl p-3 flex gap-3 items-center shadow">
+      <li data-prod-id="stylebangway" class="overlay-card bg-black/60 rounded-2xl p-3 flex gap-3 items-center shadow">
         <img src="https://i.imgur.com/ghNd4So.jpeg" alt="FLM Style Bang Way" class="w-20 h-20 rounded-xl object-cover flex-shrink-0">
         <div class="flex-1">
           <div class="font-semibold leading-tight">FLM Style Bang Way</div>
@@ -581,7 +544,7 @@
       </li>
 
       <!-- 24 -->
-      <li data-prod-id="styletrabas" data-is-new="true" class="overlay-card bg-black/60 rounded-2xl p-3 flex gap-3 items-center shadow">
+      <li data-prod-id="styletrabas" class="overlay-card bg-black/60 rounded-2xl p-3 flex gap-3 items-center shadow">
         <img src="https://i.imgur.com/ghNd4So.jpeg" alt="FLM Style DJ Trabas & Maspin RMX" class="w-20 h-20 rounded-xl object-cover flex-shrink-0">
         <div class="flex-1">
           <div class="font-semibold leading-tight">FLM Style DJ Trabas & Maspin RMX</div>
@@ -596,7 +559,7 @@
       </li>
 
       <!-- 25 -->
-      <li data-prod-id="stylenroktok" data-is-new="true" class="overlay-card bg-black/60 rounded-2xl p-3 flex gap-3 items-center shadow">
+      <li data-prod-id="stylenroktok" class="overlay-card bg-black/60 rounded-2xl p-3 flex gap-3 items-center shadow">
         <img src="https://i.imgur.com/ghNd4So.jpeg" alt="FLM Style Middle Nroktok" class="w-20 h-20 rounded-xl object-cover flex-shrink-0">
         <div class="flex-1">
           <div class="font-semibold leading-tight">FLM Style Middle Nroktok</div>
@@ -611,7 +574,7 @@
       </li>
 
       <!-- 26 -->
-      <li data-prod-id="styledjtopeng" data-is-new="true" class="overlay-card bg-black/60 rounded-2xl p-3 flex gap-3 items-center shadow">
+      <li data-prod-id="styledjtopeng" class="overlay-card bg-black/60 rounded-2xl p-3 flex gap-3 items-center shadow">
         <img src="https://i.imgur.com/ghNd4So.jpeg" alt="FLM Style DJ Topeng" class="w-20 h-20 rounded-xl object-cover flex-shrink-0">
         <div class="flex-1">
           <div class="font-semibold leading-tight">FLM Style DJ Topeng</div>
@@ -626,7 +589,7 @@
       </li>
 
       <!-- 27 -->
-      <li data-prod-id="stylenabihiko" data-is-new="true" class="overlay-card bg-black/60 rounded-2xl p-3 flex gap-3 items-center shadow">
+      <li data-prod-id="stylenabihiko" class="overlay-card bg-black/60 rounded-2xl p-3 flex gap-3 items-center shadow">
         <img src="https://i.imgur.com/ghNd4So.jpeg" alt="FLM Style Nabih Iko OLD" class="w-20 h-20 rounded-xl object-cover flex-shrink-0">
         <div class="flex-1">
           <div class="font-semibold leading-tight">FLM Style Nabih Iko OLD</div>
@@ -638,6 +601,21 @@
           <div class="player-controls-container"></div>
         </div>
         <audio id="audio27" src="https://raw.githubusercontent.com/muslihfvnky/Muslih-Fvnky-Market/main/stylenabihiko.mp3" preload="metadata"></audio>
+      </li>
+
+      <!-- 28 (PRODUK TERBARU YANG BARU KAMU KIRIM) -->
+      <li data-prod-id="bootleg28" class="overlay-card bg-black/60 rounded-2xl p-3 flex gap-3 items-center shadow">
+        <img src="https://i.imgur.com/ghNd4So.jpeg" alt="FLM Bootleg Kila Fvnky" class="w-20 h-20 rounded-xl object-cover flex-shrink-0">
+        <div class="flex-1">
+          <div class="font-semibold leading-tight">FLM Bootleg Kila Fvnky</div>
+          <div class="text-sm opacity-90">💲 Rp 95.000</div>
+          <div class="mt-2 flex gap-2 items-center">
+            <button data-audio="audio28" class="play-btn px-3 py-2 rounded-xl bg-[#0FFCBE] text-black hover:bg-[#106EBE] hover:text-white transition">▶ Play Preview</button>
+            <a data-buy="bootleg28" href="pembayaran.html?produk=FLM%20Bootleg%20Kila%20Fvnky" class="px-3 py-2 rounded-xl bg-[#106EBE] hover:bg-[#0FFCBE] hover=text-black font-medium transition">🛒 Beli</a>
+          </div>
+          <div class="player-controls-container"></div>
+        </div>
+        <audio id="audio28" src="https://raw.githubusercontent.com/muslihfvnky/Muslih-Fvnky-Market/main/28.mp3" preload="metadata"></audio>
       </li>
 
     </ul>
@@ -667,16 +645,17 @@
       audio15: 28,
       audio16: 83,
       audio17: 46,
-      audio18: 38,
-      audio19: 32,
-      audio20: 34,
-      audio21: 24,
-      audio22: 22,
-      audio23: 32,
-      audio24: 29,
-      audio25: 49,
-      audio26: 35,
-      audio27: 44
+      audio18:38,
+      audio19:32,
+      audio20:34,
+      audio21:24,
+      audio22:22,
+      audio23:32,
+      audio24:29,
+      audio25:49,
+      audio26:35,
+      audio27:44,
+      audio28:99
     };
 
     // Helper: format seconds -> mm:ss
@@ -981,16 +960,6 @@
       renderPopular(5);
       // Re-render every 20s in case other tab changed localStorage
       setInterval(renderPopular, 20000);
-
-      // --- SET ORIGINAL INDEX (penting untuk urutan 27->1) ---
-      const produkGrid = document.getElementById('produk-grid');
-      if (produkGrid) {
-        const lis = Array.from(produkGrid.querySelectorAll('li'));
-        lis.forEach((li, idx) => {
-          // simpan index awal sebagai angka (1..N)
-          li.dataset.originalIndex = (idx + 1).toString();
-        });
-      }
     });
 
     // listen to storage events (update across tabs)
@@ -1006,118 +975,5 @@
       }
     });
   </script>
-
-  <!-- NEW: sorting/grouping script (reorders DOM nodes; does NOT remove products) -->
-  <script>
-    (function(){
-      const produkGrid = document.getElementById('produk-grid');
-      const groupSel = document.getElementById('groupSelect');
-      const sortSel = document.getElementById('sortSelect');
-      const applyBtn = document.getElementById('applySort');
-
-      // helper: extract product name text
-      function getName(li){
-        return (li.querySelector('.font-semibold')?.textContent || '').trim();
-      }
-      // helper: determine isNew from attribute or class
-      function isNewProduct(li){
-        const attr = li.getAttribute('data-is-new');
-        if (attr === 'true') return true;
-        if (li.classList.contains('is-new')) return true;
-        return false;
-      }
-
-      // helper: original index
-      function originalIndex(li){
-        const val = parseInt(li.dataset.originalIndex || '0', 10);
-        return isNaN(val) ? 0 : val;
-      }
-
-      // Sort array of <li> by name asc/desc
-      function sortListByName(arr, order){
-        if(order === 'none') return arr; // keep original sequence
-        return arr.slice().sort((A,B) => {
-          const a = (getName(A) || '').toLowerCase();
-          const b = (getName(B) || '').toLowerCase();
-          if (a < b) return order === 'az' ? -1 : 1;
-          if (a > b) return order === 'az' ? 1 : -1;
-          return 0;
-        });
-      }
-
-      // Sort array of <li> by original index asc/desc
-      function sortByOriginalIndex(arr, direction){
-        return arr.slice().sort((A,B) => {
-          const a = originalIndex(A);
-          const b = originalIndex(B);
-          return direction === 'asc' ? (a - b) : (b - a);
-        });
-      }
-
-      // Main reorder function
-      function reorderProducts(){
-        if(!produkGrid) return;
-        const items = Array.from(produkGrid.querySelectorAll('li'));
-        if(items.length === 0) return;
-
-        const groupMode = groupSel.value; // 'all' | 'baru-top' | 'lama-top'
-        const sortMode = sortSel.value;   // 'none' | 'az' | 'za'
-
-        // Partition into new & old (preserve current DOM order in arrays)
-        const newItems = [], oldItems = [];
-        items.forEach(li => {
-          if(isNewProduct(li)) newItems.push(li);
-          else oldItems.push(li);
-        });
-
-        // If groupMode is baru-top or lama-top, follow the exact ordering rule requested:
-        // - Produk baru should be ordered by originalIndex DESC (27 -> 1)
-        // - Produk lama should be ordered by originalIndex ASC (1 -> 27)
-        // and vice versa for lama-top (old first asc, new second desc).
-        let finalOrder = [];
-
-        if(groupMode === 'baru-top'){
-          // new: descending original index; old: ascending original index
-          const newSorted = sortByOriginalIndex(newItems, 'desc');
-          const oldSorted = sortByOriginalIndex(oldItems, 'asc');
-          finalOrder = newSorted.concat(oldSorted);
-        } else if(groupMode === 'lama-top'){
-          // old first asc, new second desc
-          const oldSorted = sortByOriginalIndex(oldItems, 'asc');
-          const newSorted = sortByOriginalIndex(newItems, 'desc');
-          finalOrder = oldSorted.concat(newSorted);
-        } else {
-          // groupMode === 'all'
-          if(sortMode === 'none'){
-            // preserve original DOM order (do nothing)
-            finalOrder = items;
-          } else {
-            // global alphabetical sort applied across all items
-            const combined = items.slice();
-            finalOrder = sortListByName(combined, sortMode);
-          }
-        }
-
-        // Append in order (this moves nodes, doesn't recreate)
-        finalOrder.forEach(node => produkGrid.appendChild(node));
-      }
-
-      // initial bind
-      applyBtn.addEventListener('click', (e) => {
-        e.preventDefault();
-        reorderProducts();
-      });
-
-      // immediate apply when group changes to reflect requested behavior quickly
-      groupSel.addEventListener('change', () => reorderProducts());
-      // do not auto apply on sort change to avoid accidental reorders, user can click Terapkan
-      // but you can enable live sorting by uncommenting following line:
-      // sortSel.addEventListener('change', () => reorderProducts());
-
-      // expose for debugging
-      window.reorderProducts = reorderProducts;
-    })();
-  </script>
-
 </body>
 </html>
