--- a/jual-flm.html
+++ b/jual-flm.html
@@ -211,8 +211,8 @@
 
     <!-- FILTER CONTROLS (tidak mengubah gaya utama, hanya tombol kecil) -->
     <div class="flex gap-2 items-center mb-4">
-      <button id="btn-new" class="px-3 py-2 rounded-xl bg-[#0FFCBE] text-black font-semibold">Produk Baru</button>
-      <button id="btn-old" class="px-3 py-2 rounded-xl bg-[#106EBE] text-white font-semibold">Produk Lama</button>
+      <button id="btn-new" class="px-3 py-2 rounded-xl bg-[#0FFCBE] text-black font-semibold">Baru Ditambahkan</button>
+      <button id="btn-old" class="px-3 py-2 rounded-xl bg-[#106EBE] text-white font-semibold">Lama Ditambahkan</button>
       <div class="text-sm text-gray-300 ml-3"> (Klik untuk urutkan. Produk tidak disembunyikan, hanya diurutkan.)</div>
     </div>
 
