--- a/jual-flm.html
+++ b/jual-flm.html
@@ -3,25 +3,25 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Muslih Fvnky Shop – Daftar FLM</title>
+  <title>Muslih Fvnky Shop – Jual FLM</title>
 
   <!-- ======= SEO & Social (ditambahkan tanpa menghapus konten lain) ======= -->
   <meta name="description" content="Daftar FLM (projek FL Studio Mobile) dari Muslih Fvnky Shop — lengkap dengan preview, harga, dan tombol pembelian. FLM siap diimport ke FL Studio Mobile. Hubungi WA untuk bantuan.">
   <meta name="keywords" content="FLM, FL Studio Mobile, Jual FLM, Projek FLM, Muslih Fvnky Shop, Beat, Musik, Beli FLM" />
   <meta name="author" content="Muslih Fvnky" />
   <meta name="robots" content="index, follow" />
-  <link rel="canonical" href="https://muslihfvnkyshop.my.id/daftar-flm.html" />
+  <link rel="canonical" href="https://muslihfvnkyshop.my.id/jual-flm.html" />
 
   <!-- Open Graph -->
-  <meta property="og:title" content="Muslih Fvnky Shop – Daftar FLM" />
+  <meta property="og:title" content="Muslih Fvnky Shop – Jual FLM" />
   <meta property="og:description" content="Daftar FLM (projek FL Studio Mobile) dari Muslih Fvnky Shop — lihat preview, harga, dan langsung beli lewat tombol pembayaran atau WA." />
   <meta property="og:image" content="https://i.imgur.com/ghNd4So.jpeg" />
-  <meta property="og:url" content="https://muslihfvnkyshop.my.id/daftar-flm.html" />
+  <meta property="og:url" content="https://muslihfvnkyshop.my.id/jual-flm.html" />
   <meta property="og:type" content="website" />
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Muslih Fvnky Shop – Daftar FLM" />
+  <meta name="twitter:title" content="Muslih Fvnky Shop – Jual FLM" />
   <meta name="twitter:description" content="Daftar FLM (projek FL Studio Mobile) — preview & harga tersedia. Hubungi WA untuk pembelian." />
   <meta name="twitter:image" content="https://i.imgur.com/ghNd4So.jpeg" />
   <!-- =================================================================== -->
@@ -496,7 +496,7 @@
           <div class="font-semibold leading-tight">FLM Style Old</div>
           <div class="text-sm opacity-90">💲 Rp 50.000</div>
           <div class="mt-2 flex gap-2 items-center">
-            <button data-audio="audio20" class="play-btn px-3 py-2 rounded-xl bg-[#0FFCBE] text-black hover:bg-[#106EBE] hover:text-white transition">▶ Play Preview</button>
+            <button data-audio="audio20" class="play-btn px-3 py-2 rounded-xl bg-[#0FFCBE] text-black hover:bg-[#106EBE] hover=text-white transition">▶ Play Preview</button>
             <a data-buy="styleold" href="pembayaran.html?produk=FLM%20Style%20Old" class="px-3 py-2 rounded-xl bg-[#106EBE] hover:bg-[#0FFCBE] hover=text-black font-medium transition">🛒 Beli</a>
           </div>
           <div class="player-controls-container"></div>
@@ -624,6 +624,22 @@
         <audio id="audio28" src="https://raw.githubusercontent.com/muslihfvnky/Muslih-Fvnky-Market/main/28.mp3" preload="metadata"></audio>
       </li>
 
+      <!-- 29 (PRODUK BARU YANG KAMU MINTA DITAMBAHKAN) -->
+      <li data-uid="28" data-prod-id="trapp_pepass" class="overlay-card bg-black/60 rounded-2xl p-3 flex gap-3 items-center shadow">
+        <img src="https://i.imgur.com/ghNd4So.jpeg" alt="Trapp Nrotok Bass Blayer" class="w-20 h-20 rounded-xl object-cover flex-shrink-0">
+        <div class="flex-1">
+          <div class="font-semibold leading-tight">Trapp Nrotok Bass Blayer</div>
+          <div class="text-sm opacity-90">💲 Rp 130.000</div>
+          <div class="mt-2 flex gap-2 items-center">
+            <button data-audio="audio29" class="play-btn px-3 py-2 rounded-xl bg-[#0FFCBE] text-black hover:bg-[#106EBE] hover:text-white transition">▶ Play Preview</button>
+            <a data-buy="trapp_pepass" href="pembayaran.html?produk=Trapp%20Nrotok%20Bass%20Blayer" class="px-3 py-2 rounded-xl bg-[#106EBE] hover:bg-[#0FFCBE] hover=text-black font-medium transition">🛒 Beli</a>
+          </div>
+          <div class="player-controls-container"></div>
+        </div>
+        <!-- audio file name sesuai input: ####pepass.....mp3 -->
+        <audio id="audio29" src="https://raw.githubusercontent.com/muslihfvnky/Muslih-Fvnky-Market/main/####pepass.....mp3" preload="metadata"></audio>
+      </li>
+
     </ul>
   </main>
 
@@ -661,7 +677,8 @@
       audio25: 49,
       audio26: 35,
       audio27: 44,
-      audio28: 99
+      audio28: 99,
+      audio29: 305
     };
 
     // Helper: format seconds -> mm:ss
