--- a/pembayaran.html
+++ b/pembayaran.html
@@ -37,25 +37,28 @@
       margin: 0;
     }
     .box {
-      background-color: rgba(16, 110, 190, 0.85);
+      background-color: rgba(16, 110, 190, 0.92);
       padding: 20px;
       border-radius: 10px;
-      max-width: 400px;
+      max-width: 440px;
       margin: auto;
       border: 2px solid #0FFCBE;
-      box-shadow: 0 0 15px rgba(15, 252, 190, 0.7);
+      box-shadow: 0 0 18px rgba(15, 252, 190, 0.7);
+      color: #e8fff8;
     }
-    input, select, button, a {
+    label { display:block; text-align:left; margin-top:10px; font-weight:700; }
+    input, select, button, a, .link-btn {
       width: calc(100% - 4px);
       padding: 12px;
-      margin: 10px 0;
-      border-radius: 5px;
+      margin: 8px 0;
+      border-radius: 8px;
       border: none;
       text-decoration: none;
       display: block;
       font-size: 16px;
       box-sizing: border-box;
     }
+    input[type="number"] { -moz-appearance: textfield; }
     button {
       background-color: #106EBE;
       color: #fff;
@@ -68,8 +71,8 @@
     }
     .btn-dana {
       background-color: #0FFCBE;
-      color: #106EBE;
-      font-weight: bold;
+      color: #002028;
+      font-weight: 900;
       text-align: center;
       cursor: pointer;
       border: 2px solid #106EBE;
@@ -78,33 +81,91 @@
       background-color: #14e4a8;
     }
     .qr-img {
-      width: 250px;
+      width: 240px;
       border-radius: 10px;
       margin: 10px auto;
       display: block;
       border: 2px solid #0FFCBE;
     }
+
+    /* struk preview (mirip style WA bubble) */
+    .receipt-preview {
+      margin-top:12px;
+      text-align: left;
+      background: linear-gradient(180deg, #0b633f, #064b32);
+      border-radius: 12px;
+      padding: 12px;
+      color: #e9ffe7;
+      border: 2px solid rgba(255,255,255,0.04);
+      box-shadow: 0 6px 20px rgba(0,0,0,0.6), inset 0 -6px 20px rgba(0,0,0,0.15);
+      display: none;
+    }
+    .receipt-preview .line { margin:6px 0; font-weight:700; }
+    .muted { font-weight:600; color:#c7f1d8; opacity:0.95; }
+    .receipt-meta { display:flex; gap:8px; align-items:center; margin-bottom:8px; }
+    .receipt-actions { display:flex; gap:8px; margin-top:8px; }
+
+    .small {
+      font-size: 12px;
+      opacity: 0.9;
+    }
+
+    .copy-btn { background:#ffd24d; color:#001827; border:2px solid rgba(0,0,0,0.06); font-weight:800; padding:10px; border-radius:8px; }
+    .copy-btn:hover { filter:brightness(0.98); }
+
+    .note { margin-top:8px; font-size:13px; color:#d9fbe9; opacity:0.9; }
+
+    @media (max-width:480px){
+      .box { padding:14px; width:92%; }
+      .qr-img { width:200px; }
+    }
   </style>
 </head>
 <body>
   <div class="box">
-    <h2>Pembayaran Muslih Fvnky</h2>
-    <p><strong>Nomor DANA:</strong> 083821665970</p>
+    <h2 style="margin:0 0 6px 0">Pembayaran Muslih Fvnky</h2>
+    <p class="small" style="margin:0 0 12px 0">Nomor DANA & QRIS di bawah. Isi produk & nominal lalu tekan Bayar / Kirim WA.</p>
+
+    <p style="margin:6px 0 4px 0"><strong>Nomor DANA:</strong> <span style="color:#001827;background:#0FFCBE;padding:4px 8px;border-radius:6px;font-weight:900">083821665970</span></p>
 
     <img src="https://i.imgur.com/vxI5p9w.png" alt="Qris" class="qr-img" />
 
     <label for="produk">Jenis Produk:</label>
-    <input type="text" id="produk" placeholder="Contoh: FLM Trabas" required />
+    <input type="text" id="produk" placeholder="Contoh: FLM Trabas" />
 
     <label for="nominal">Nominal Transfer (Rp):</label>
-    <input type="number" id="nominal" placeholder="Contoh: 100000" required />
+    <input type="number" id="nominal" placeholder="Contoh: 100000" />
 
-    <a id="btnDana" class="btn-dana" href="#" target="_blank">Bayar via DANA</a>
+    <label for="metode">Pilih Metode:</label>
+    <select id="metode">
+      <option value="DANA">DANA</option>
+      <option value="QRIS">QRIS</option>
+      <option value="Bank Transfer">Bank Transfer</option>
+    </select>
 
-    <button onclick="kirimWA()">Kirim ke WhatsApp</button>
+    <a id="btnDana" class="btn-dana link-btn" href="#" target="_blank" role="button">Bayar via DANA</a>
+    <button id="btnWA">Kirim ke WhatsApp</button>
+
+    <div id="receipt" class="receipt-preview" aria-hidden="true">
+      <!-- preview akan diisi JS -->
+      <div id="receipt-html"></div>
+      <div class="receipt-actions">
+        <button id="copyReceipt" class="copy-btn">Copy Pesan</button>
+        <button id="openWA" class="btn" style="background:#0b8bd1;border:2px solid #0FFCBE">Kirim ke WA</button>
+      </div>
+      <div class="note small">Pastikan kirim *screenshot* bukti transfer setelah melakukan pembayaran.</div>
+    </div>
+
   </div>
 
   <script>
+    // Nomor WA tujuan (ganti jika perlu)
+    const WA_NUMBER = '6283821665970';
+
+    // DANA link (sesuaikan bila perlu)
+    const DANA_LINK = 'https://link.dana.id/minta?full_url=https://qr.dana.id/v1/281012012022011164159294';
+
+    // ambil param ?produk=...
     window.addEventListener('DOMContentLoaded', () => {
       const urlParams = new URLSearchParams(window.location.search);
       const produk = urlParams.get('produk');
@@ -113,49 +174,164 @@
       }
     });
 
-    document.getElementById('btnDana').addEventListener('click', function (e) {
-      e.preventDefault();
-      const nominal = document.getElementById('nominal').value;
-      if (!nominal) {
-        alert('Mohon isi nominal transfer');
-        return;
-      }
-      const danaLink = `https://link.dana.id/minta?full_url=https://qr.dana.id/v1/281012012022011164159294`;
-      window.open(danaLink, '_blank');
-    });
+    // util: format number ke Rupiah sederhana
+    function formatRupiah(num){
+      if (!num && num !== 0) return '';
+      const n = Number(num);
+      if (isNaN(n)) return String(num);
+      return n.toLocaleString('id-ID');
+    }
 
-    function kirimWA() {
-      const produk = document.getElementById('produk').value;
-      const nominal = document.getElementById('nominal').value;
+    // generate ID transaksi
+    function generateTxID() {
+      return 'MF-' + (Math.floor(100000 + Math.random() * 900000));
+    }
 
-      if (!produk || !nominal) {
-        alert('Mohon isi semua data');
-        return;
-      }
-
-      const metode = "DANA";
+    // ambil waktu & tanggal terformat
+    function getTimeDate() {
       const now = new Date();
-      const jam = now.toTimeString().split(' ')[0];
-
-      const hari = ["Minggu", "Senin", "Selasa", "Rabu", "Kamis", "Jumat", "Sabtu"];
-      const bulan = ["Januari", "Februari", "Maret", "April", "Mei", "Juni", "Juli", "Agustus", "September", "Oktober", "November", "Desember"];
-
+      const jam = now.toTimeString().split(' ')[0]; // HH:MM:SS
+      const hari = ["Minggu","Senin","Selasa","Rabu","Kamis","Jumat","Sabtu"];
+      const bulan = ["Januari","Februari","Maret","April","Mei","Juni","Juli","Agustus","September","Oktober","November","Desember"];
       const tanggal = `${hari[now.getDay()]}, ${now.getDate()} ${bulan[now.getMonth()]} ${now.getFullYear()}`;
-      const transaksiID = `MF-${Math.floor(100000 + Math.random() * 900000)}`;
+      return { jam, tanggal, raw: now };
+    }
 
-      const pesan = `*Website Pembayaran - Muslih Fvnky*
+    // build pesan untuk WA (teks dengan markdown WA: *bold*)
+    function buildWaMessage(tx) {
+      // tx: {id, produk, nominal, metode, jam, tanggal}
+      const pes = [
+        '*Website Pembayaran - Muslih Fvnky*',
+        '',
+        `📌 *ID Transaksi* : ${tx.id}`,
+        `🛒 *Produk*       : ${tx.produk}`,
+        `💰 *Nominal*      : Rp${formatRupiah(tx.nominal)}`,
+        `💳 *Metode*       : ${tx.metode}`,
+        `⏰ *Jam*          : ${tx.jam} WIB`,
+        `📅 *Tanggal*      : ${tx.tanggal}`,
+        '',
+        '_Harap kirim screenshot transaksi_'
+      ].join('\n');
+      return pes;
+    }
 
-*📌 ID Transaksi : ${transaksiID}*
-*🛒 Produk         : ${produk}*
-*💰 Nominal        : Rp${nominal}*
-*💳 Metode         : ${metode}*
-*🕒 Jam               : ${jam} WIB*
-*📅 Tanggal        : ${tanggal}*
-> *Harap kirim screenshot transaksi*`;
+    // build HTML preview that looks like WA bubble
+    function buildPreviewHtml(tx) {
+      return `
+        <div class="receipt-meta">
+          <div style="font-weight:900;font-size:14px">Website Pembayaran - Muslih Fvnky</div>
+        </div>
+        <div class="line muted">📌 ID Transaksi : <strong>${tx.id}</strong></div>
+        <div class="line muted">🛒 Produk       : <strong>${escapeHtml(tx.produk)}</strong></div>
+        <div class="line muted">💰 Nominal      : <strong>Rp ${formatRupiah(tx.nominal)}</strong></div>
+        <div class="line muted">💳 Metode       : <strong>${tx.metode}</strong></div>
+        <div class="line muted">⏰ Jam          : <strong>${tx.jam} WIB</strong></div>
+        <div class="line muted">📅 Tanggal      : <strong>${tx.tanggal}</strong></div>
+      `;
+    }
 
-      const url = `https://wa.me/6283821665970?text=${encodeURIComponent(pesan)}`;
+    // escape html for preview
+    function escapeHtml(s){
+      return (''+s).replace(/[&<>"']/g, (m)=>({ '&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#39;' })[m]);
+    }
+
+    // show preview block with tx data
+    function showReceipt(tx) {
+      const r = document.getElementById('receipt');
+      const h = document.getElementById('receipt-html');
+      h.innerHTML = buildPreviewHtml(tx);
+      r.style.display = 'block';
+      r.setAttribute('aria-hidden', 'false');
+    }
+
+    // create tx object from inputs
+    function createTransaction() {
+      const produk = (document.getElementById('produk').value || '').trim();
+      const nominalRaw = document.getElementById('nominal').value;
+      const metode = document.getElementById('metode').value || 'DANA';
+      if (!produk) {
+        alert('Mohon isi jenis produk.');
+        return null;
+      }
+      if (!nominalRaw || isNaN(Number(nominalRaw)) || Number(nominalRaw) <= 0) {
+        alert('Mohon isi nominal transfer yang valid.');
+        return null;
+      }
+      const nominal = Math.floor(Number(nominalRaw));
+      const { jam, tanggal } = getTimeDate();
+      const id = generateTxID();
+      return { id, produk, nominal, metode, jam, tanggal };
+    }
+
+    // open WA with message
+    function openWhatsApp(message) {
+      const url = `https://wa.me/${WA_NUMBER}?text=${encodeURIComponent(message)}`;
       window.open(url, '_blank');
     }
+
+    // --- wiring tombol ---
+    const btnDana = document.getElementById('btnDana');
+    const btnWA = document.getElementById('btnWA');
+    const openWAbtn = document.getElementById('openWA');
+    const copyBtn = document.getElementById('copyReceipt');
+
+    // When user clicks "Bayar via DANA" -> validate, open DANA link, show preview, and open WA
+    btnDana.addEventListener('click', (e) => {
+      e.preventDefault();
+      const tx = createTransaction();
+      if (!tx) return;
+
+      // show preview
+      showReceipt(tx);
+
+      // open DANA in new tab (user still initiated click so browsers usually allow)
+      window.open(DANA_LINK, '_blank');
+
+      // build WA message and open WA (in new tab)
+      const pesan = buildWaMessage(tx);
+      // open wa in separate tab (user initiated click)
+      openWhatsApp(pesan);
+    });
+
+    // "Kirim ke WhatsApp" button (manual)
+    btnWA.addEventListener('click', (e) => {
+      e.preventDefault();
+      const tx = createTransaction();
+      if (!tx) return;
+      showReceipt(tx);
+      const pesan = buildWaMessage(tx);
+      openWhatsApp(pesan);
+    });
+
+    // button inside preview: open WA again (uses last shown preview)
+    openWAbtn.addEventListener('click', (e) => {
+      e.preventDefault();
+      // read preview values
+      const html = document.getElementById('receipt-html').innerText || '';
+      // better to reconstruct tx from inputs to ensure correctness
+      const tx = createTransaction();
+      if (!tx) return;
+      const pesan = buildWaMessage(tx);
+      openWhatsApp(pesan);
+    });
+
+    // copy receipt text to clipboard (WA message format)
+    copyBtn.addEventListener('click', async () => {
+      const tx = createTransaction();
+      if (!tx) return;
+      const pesan = buildWaMessage(tx);
+      try {
+        await navigator.clipboard.writeText(pesan);
+        copyBtn.textContent = 'Tersalin ✓';
+        setTimeout(()=> copyBtn.textContent = 'Copy Pesan', 2000);
+      } catch (err) {
+        alert('Gagal menyalin. Silakan salin manual pesan yang tampil di preview.');
+      }
+    });
+
+    // optional: fill inputs from query params (produk already handled above)
+    // disable form autocomplete quirks on mobile
+    document.addEventListener('touchstart', ()=>{}, {passive:true});
   </script>
 </body>
 </html>
