--- a/jual-flm.html
+++ b/jual-flm.html
@@ -803,15 +803,15 @@
       </li>
 
       <!-- 32 -->
-      <li data-uid="31" data-prod-id="Trap Sa Pamit Viral" data-price="200000" data-category="slow,horeg" class="overlay-card bg-black/60 rounded-2xl p-3 flex gap-3 items-center shadow">
-        <img src="https://i.imgur.com/ghNd4So.jpeg" alt="Trap Sa Pamit Viral" class="w-20 h-20 rounded-xl object-cover flex-shrink-0">
+      <li data-uid="31" data-prod-id="DJ TRAP TASSO" data-price="200000" data-category="slow,horeg" class="overlay-card bg-black/60 rounded-2xl p-3 flex gap-3 items-center shadow">
+        <img src="https://i.imgur.com/ghNd4So.jpeg" alt="DJ TRAP TASSO" class="w-20 h-20 rounded-xl object-cover flex-shrink-0">
         <div class="flex-1">
-          <div class="font-semibold leading-tight">Trap Sa Pamit Viral</div>
+          <div class="font-semibold leading-tight">DJ TRAP TASSO</div>
           <div class="text-sm opacity-90">💲 Rp200.000</div>
           <div class="mt-2 flex gap-2 items-center">
             <button data-audio="audio32" class="play-btn px-3 py-2 rounded-xl bg-[#0FFCBE] text-black hover:bg-[#106EBE] hover:text-white transition">▶ Play Preview</button>
-            <a data-buy="Trap Sa Pamit Viral" href="pembayaran.html?produk=Trap Sa Pamit Viral" class="px-3 py-2 rounded-xl bg-[#106EBE] hover:bg-[#0FFCBE] hover:text-black font-medium transition">🛒 Beli</a>
-            <button data-cart="Trap Sa Pamit Viral" class="add-cart-btn px-3 py-2 rounded-xl bg-[#ffd24d] text-black font-semibold">Tambah ke Keranjang</button>
+            <a data-buy="DJ TRAP TASSO" href="pembayaran.html?produk=DJ%20TRAP%20TASSO" class="px-3 py-2 rounded-xl bg-[#106EBE] hover:bg-[#0FFCBE] hover:text-black font-medium transition">🛒 Beli</a>
+            <button data-cart="DJ TRAP TASSO" class="add-cart-btn px-3 py-2 rounded-xl bg-[#ffd24d] text-black font-semibold">Tambah ke Keranjang</button>
           </div>
           <div class="player-controls-container"></div>
         </div>
@@ -819,7 +819,7 @@
       </li>
 
       <!-- 33 -->
-      <li data-uid="32" data-prod-id="Style Caro Fvnky" data-price="82000" data-category="slow,horeg,FYP Tiktok" class="overlay-card bg-black/60 rounded-2xl p-3 flex gap-3 items-center shadow">
+      <li data-uid="32" data-prod-id="Style Caro Fvnky" data-price="82000" data-category="slow,FYP Tiktok" class="overlay-card bg-black/60 rounded-2xl p-3 flex gap-3 items-center shadow">
         <img src="https://i.imgur.com/ghNd4So.jpeg" alt="Style Caro Fvnky" class="w-20 h-20 rounded-xl object-cover flex-shrink-0">
         <div class="flex-1">
           <div class="font-semibold leading-tight">Style Caro Fvnky</div>
@@ -872,6 +872,7 @@
       audio27: 44,
       audio28: 99,
       audio29: 305,
+      audio30: 224,
       audio31:44,
       audio32:313,
       audio33:36
