--- a/comments.html
+++ b/comments.html
@@ -1,355 +1,29 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Komentar & Rating — Muslih Fvnky Shop</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Halaman Sedang Maintenance</title>
   <style>
-    :root{
-      --bg1:#012f2b;
-      --bg2:#063f39;
-      --card:#063f3a;
-      --glass: rgba(255,255,255,0.03);
-      --muted: #a8cfc6;
-      --accent: #00e2a9;
-      --accent-dark:#00c189;
-      --btn-text:#012f26;
-      --yellow:#ffd24d;
-      --danger:#ff6b6b;
+    body {
+      margin: 0;
+      padding: 0;
+      background-color: #000;
+      color: #fff;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      font-family: Arial, sans-serif;
     }
-    *{box-sizing:border-box}
-    body{
-      margin:0;
-      min-height:100vh;
-      font-family: Inter, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;
-      background:
-        radial-gradient(600px 300px at 10% 10%, rgba(0,200,160,0.06), transparent 20%),
-        radial-gradient(600px 300px at 90% 90%, rgba(0,80,60,0.06), transparent 20%),
-        linear-gradient(180deg,var(--bg1),var(--bg2));
-      color:#e9f7f2;
-      -webkit-font-smoothing:antialiased;
-      padding:28px 18px;
-    }
-
-    .wrap{max-width:1000px;margin:0 auto}
-    .header{display:flex;gap:16px;align-items:center;margin-bottom:20px}
-    .logo{
-      width:76px;height:76px;border-radius:14px;background:linear-gradient(135deg,#0d5f4c,#033a33);display:flex;align-items:center;justify-content:center;font-weight:900;color:#bcefe1;box-shadow:0 18px 40px rgba(0,0,0,0.45)
-    }
-    .title{font-size:28px;margin:0}
-    .subtitle{color:var(--muted);margin-top:6px;font-size:14px}
-
-    .card{background: linear-gradient(180deg, rgba(255,255,255,0.02), rgba(0,0,0,0.06));border-radius:16px;padding:18px;box-shadow:0 18px 40px rgba(0,0,0,0.45);margin-bottom:18px}
-    .summary{background: rgba(0,0,0,0.12);border-radius:12px;padding:14px;margin-bottom:14px;display:flex;justify-content:space-between;align-items:center}
-    .avg{font-size:28px;font-weight:900}
-    .avg small{font-size:14px;color:var(--muted);font-weight:600;margin-left:8px}
-
-    label{display:block;color:var(--muted);font-weight:800;margin-bottom:8px}
-    input[type=text], textarea{
-      width:100%;padding:14px;border-radius:12px;border:none;background:#f6fbfa;color:#05342e;font-size:15px;outline:none;
-    }
-    textarea{min-height:120px;resize:vertical}
-
-    .stars{display:flex;gap:10px;align-items:center}
-    .star{font-size:28px;cursor:pointer;color:rgba(255,255,255,0.28);transition:color .12s}
-    .star.active{color:var(--yellow)}
-
-    .row{display:flex;gap:12px;align-items:center;margin-top:14px}
-    .btn{
-      padding:12px 18px;border-radius:12px;border:none;font-weight:800;cursor:pointer;
-      box-shadow:0 8px 0 rgba(0,0,0,0.14);
-    }
-    .btn-send{background:var(--accent);color:var(--btn-text)}
-    .btn-reset{background:rgba(255,255,255,0.06);color:var(--muted);box-shadow:none}
-
-    .file-info{margin-left:12px;color:var(--muted);font-weight:700}
-
-    .progress-wrap{height:8px;background:rgba(255,255,255,0.04);border-radius:999px;margin-top:10px;overflow:hidden}
-    .progress{height:100%;width:0;background:linear-gradient(90deg,var(--accent),#00ffd0)}
-
-    .status{margin-left:12px}
-
-    .comments{display:flex;flex-direction:column;gap:12px;margin-top:18px}
-    .comment{
-      display:flex;gap:12px;align-items:flex-start;background:var(--card);padding:14px;border-radius:12px;
-    }
-    .thumb{width:72px;height:72px;border-radius:10px;object-fit:cover;flex:0 0 72px;background:linear-gradient(180deg, rgba(255,255,255,0.03), rgba(0,0,0,0.06))}
-    .meta{flex:1}
-    .cname{font-weight:900}
-    .crating{color:var(--yellow);margin-top:6px}
-    .ctime{font-size:12px;color:var(--muted);margin-top:8px}
-    .empty{padding:16px;border-radius:10px;background:rgba(0,0,0,0.12);color:var(--muted);text-align:center}
-
-    .notice{margin-top:16px;padding:12px;border-radius:10px;background:rgba(255,255,255,0.02);color:var(--muted);text-align:center}
-
-    @media (max-width:560px){
-      .logo{width:56px;height:56px}
-      .title{font-size:22px}
+    h1 {
+      font-size: 1.8rem;
+      font-weight: bold;
+      text-align: center;
     }
   </style>
 </head>
 <body>
-  <div class="wrap">
-    <div class="header">
-      <div class="logo">MF</div>
-      <div>
-        <h1 class="title">Komentar & Rating — Muslih Fvnky Shop</h1>
-        <div class="subtitle">Pengunjung bisa beri rating, komentar, dan upload foto. Semua tampil otomatis.</div>
-      </div>
-    </div>
-
-    <div class="card">
-      <div class="summary">
-        <div>
-          <div class="avg" id="avgRating">- <small>★★★★★</small></div>
-          <div style="color:var(--muted);margin-top:6px" id="countReviews">(0 ulasan)</div>
-        </div>
-        <div>
-          <button onclick="location.href='/'" class="btn btn-reset" style="padding:10px 14px;border-radius:999px">← Kembali ke Toko</button>
-        </div>
-      </div>
-
-      <div>
-        <label for="name">Nama</label>
-        <input id="name" type="text" placeholder="Nama kamu (atau panggilan)" />
-      </div>
-
-      <div style="margin-top:12px">
-        <label for="comment">Komentar</label>
-        <textarea id="comment" placeholder="Tulis pengalamanmu"></textarea>
-      </div>
-
-      <div style="margin-top:12px">
-        <label>Rating</label>
-        <div class="stars" id="stars">
-          <span class="star" data-value="1">☆</span>
-          <span class="star" data-value="2">☆</span>
-          <span class="star" data-value="3">☆</span>
-          <span class="star" data-value="4">☆</span>
-          <span class="star" data-value="5">☆</span>
-          <div style="margin-left:auto;color:var(--muted)" id="rating-text">Klik satu bintang untuk memilih rating.</div>
-        </div>
-      </div>
-
-      <div style="margin-top:12px">
-        <label>Upload Foto (opsional, max 5 MB)</label>
-        <div style="display:flex;align-items:center">
-          <input id="file" type="file" accept="image/*" />
-          <div class="file-info" id="file-name">Tidak ada file yang dipilih</div>
-        </div>
-        <div class="progress-wrap"><div id="progress" class="progress"></div></div>
-      </div>
-
-      <div class="row">
-        <button id="sendBtn" class="btn btn-send">Kirim Komentar</button>
-        <button id="resetBtn" class="btn btn-reset">Reset</button>
-        <div id="statusMsg" class="status"></div>
-      </div>
-    </div>
-
-    <div id="commentsContainer" class="comments" aria-live="polite"></div>
-
-    <div id="empty" class="notice" style="display:none">Belum ada komentar. Jadilah yang pertama!</div>
-
-  </div>
-
-<script>
-/* UI + logic */
-const stars = document.querySelectorAll('.star');
-let currentRating = 0;
-const ratingText = document.getElementById('rating-text');
-stars.forEach(s => s.addEventListener('click', () => {
-  currentRating = Number(s.dataset.value);
-  updateStars();
-}));
-function updateStars(){
-  stars.forEach(s => {
-    const v = Number(s.dataset.value);
-    if(v <= currentRating){ s.classList.add('active'); s.textContent='★'; }
-    else { s.classList.remove('active'); s.textContent='☆'; }
-  });
-  ratingText.textContent = currentRating ? `Kamu memilih ${currentRating} bintang` : 'Klik satu bintang untuk memilih rating.';
-}
-
-const fileInput = document.getElementById('file');
-const fileNameEl = document.getElementById('file-name');
-const progressEl = document.getElementById('progress');
-let chosenFile = null;
-
-fileInput.addEventListener('change', e=>{
-  const f = e.target.files[0];
-  if(!f){ fileNameEl.textContent='Tidak ada file yang dipilih'; chosenFile=null; return; }
-  if(f.size > 5 * 1024 * 1024){ alert('Ukuran file terlalu besar (max 5 MB)'); fileInput.value=''; chosenFile=null; fileNameEl.textContent='Tidak ada file yang dipilih'; return; }
-  chosenFile = f;
-  fileNameEl.textContent = `${f.name} (${Math.round(f.size/1024)} KB)`;
-});
-
-const sendBtn = document.getElementById('sendBtn');
-const resetBtn = document.getElementById('resetBtn');
-const statusMsg = document.getElementById('statusMsg');
-
-function setStatus(html){
-  statusMsg.innerHTML = html;
-}
-
-/* read file -> dataURL */
-function readFileAsDataURL(file){
-  return new Promise((res, rej) => {
-    const fr = new FileReader();
-    fr.onload = () => res(fr.result);
-    fr.onerror = e => rej(e);
-    fr.readAsDataURL(file);
-  });
-}
-
-/* POST comment to /api/upload */
-async function sendComment(){
-  setStatus('');
-  sendBtn.disabled = true; sendBtn.textContent = 'Mengirim...';
-
-  const name = (document.getElementById('name').value || '').trim() || 'Anon';
-  const comment = (document.getElementById('comment').value || '').trim();
-  if(!comment){
-    alert('Tulis komentar dulu');
-    sendBtn.disabled = false; sendBtn.textContent = 'Kirim Komentar';
-    return;
-  }
-
-  let fileBase64 = null, filename = null;
-  if(chosenFile){
-    try{ fileBase64 = await readFileAsDataURL(chosenFile); filename = chosenFile.name; } catch(e){ console.error(e); }
-  }
-
-  const payload = { name, comment, rating: currentRating, filename, fileBase64 };
-
-  try{
-    const resp = await fetch('/api/upload', {
-      method: 'POST',
-      headers: { 'Content-Type':'application/json' },
-      body: JSON.stringify(payload)
-    });
-    const data = await resp.json().catch(()=>({ error: 'Invalid JSON response' }));
-    if(!resp.ok || !data.ok){
-      console.error('POST error', data);
-      setStatus(`<div style="color:${'white'};background:${'rgba(255,0,0,0.06)'};padding:8px;border-radius:8px">❌ Error koneksi: ${data && data.error ? data.error : 'Server error'}</div>`);
-    } else {
-      setStatus(`<div style="color:#05342e;background:#bfffe9;padding:8px;border-radius:8px">✅ Komentar berhasil dikirim</div>`);
-      // reset form
-      document.getElementById('comment').value=''; document.getElementById('name').value=''; fileInput.value=''; fileNameEl.textContent='Tidak ada file yang dipilih';
-      chosenFile = null; currentRating = 0; updateStars();
-      // reload comments
-      await loadComments();
-    }
-  } catch(err){
-    console.error(err);
-    setStatus(`<div style="color:#fff;background:rgba(255,0,0,0.06);padding:8px;border-radius:8px">❌ Error koneksi: ${err.message || 'Server error'}</div>`);
-  } finally {
-    sendBtn.disabled = false; sendBtn.textContent = 'Kirim Komentar';
-  }
-}
-sendBtn.addEventListener('click', sendComment);
-resetBtn.addEventListener('click', ()=>{
-  document.getElementById('comment').value=''; document.getElementById('name').value=''; fileInput.value=''; fileNameEl.textContent='Tidak ada file yang dipilih';
-  chosenFile=null; currentRating=0; updateStars(); setStatus('');
-});
-
-/* load comments from /api/upload (GET) or fallback comments.json */
-async function loadComments(){
-  try{
-    // try API endpoint first
-    let r = await fetch('/api/upload?ts=' + Date.now());
-    if(r.ok){
-      const json = await r.json().catch(()=>({ error: 'Invalid JSON' }));
-      if(json && json.ok && Array.isArray(json.comments)){
-        renderComments(json.comments);
-        updateSummary(json.comments);
-        return;
-      }
-      // if returns ok:false, try fallback
-    }
-    // fallback to comments.json
-    let rf = await fetch('/comments.json?ts=' + Date.now());
-    if(rf.ok){
-      const jf = await rf.json().catch(()=>null);
-      if(Array.isArray(jf)){
-        renderComments(jf);
-        updateSummary(jf);
-        return;
-      }
-    }
-    // nothing
-    showEmpty();
-  } catch(err){
-    console.error(err);
-    showEmpty();
-  }
-}
-
-function showEmpty(){
-  document.getElementById('commentsContainer').innerHTML = '';
-  document.getElementById('empty').style.display = 'block';
-  document.getElementById('avgRating').innerHTML = '- <small>★★★★★</small>';
-  document.getElementById('countReviews').textContent = '(0 ulasan)';
-}
-
-function updateSummary(list){
-  const c = list || [];
-  document.getElementById('empty').style.display = c.length ? 'none' : 'block';
-  if(!c.length){
-    document.getElementById('avgRating').innerHTML = '- <small>★★★★★</small>';
-    document.getElementById('countReviews').textContent = '(0 ulasan)';
-    return;
-  }
-  // compute average
-  const sum = c.reduce((a,b)=>a + (Number(b.rating)||0), 0);
-  const avg = (sum / c.length) || 0;
-  document.getElementById('avgRating').innerHTML = `${avg.toFixed(2)} <small>★★★★★</small>`;
-  document.getElementById('countReviews').textContent = `(${c.length} ulasan)`;
-}
-
-function renderComments(list){
-  const container = document.getElementById('commentsContainer');
-  container.innerHTML = '';
-  if(!Array.isArray(list) || !list.length){ showEmpty(); return; }
-  for(const item of list){
-    const div = document.createElement('div');
-    div.className = 'comment';
-    const photo = item.photo || '';
-    const thumbHtml = photo ? `<img src="${escapeAttr(photo)}" alt="foto" class="thumb" />` : `<div class="thumb" style="display:flex;align-items:center;justify-content:center;color:var(--muted);font-weight:800">MF</div>`;
-    const when = formatTime(item.timestamp || Date.now());
-    div.innerHTML = `
-      ${thumbHtml}
-      <div class="meta">
-        <div class="cname">${escapeHtml(item.name || 'Anon')}</div>
-        <div class="crating">${renderStars(Number(item.rating)||0)}</div>
-        <div style="margin-top:8px">${escapeHtml(item.comment || '')}</div>
-        <div class="ctime">${escapeHtml(when)}</div>
-      </div>
-    `;
-    container.appendChild(div);
-  }
-}
-
-function renderStars(n){
-  let s='';
-  for(let i=0;i<5;i++) s += (i < n) ? '★' : '☆';
-  return `<span style="color:var(--yellow)">${s}</span>`;
-}
-
-function formatTime(ts){
-  try{
-    const d = new Date(ts);
-    return d.toLocaleString();
-  }catch(e){ return ts; }
-}
-function escapeHtml(s){ return String(s||'').replace(/[&<>"']/g, m=>({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#39;'}[m])); }
-function escapeAttr(s){ return (s||'').replace(/"/g,'&quot;'); }
-
-document.addEventListener('DOMContentLoaded', ()=>{
-  updateStars();
-  loadComments();
-  setInterval(loadComments, 30000);
-});
-</script>
+  <h1>Halaman Sedang<br>Maintenance 🙏</h1>
 </body>
 </html>
